--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>jQuery Ajax Example</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      $("#ajax-button").click(function() {
-        $.ajax({
-          url: "example.txt",
-          method: "GET",
-          data: { name: "John", age: 30 },
-          success: function(response) {
-            $("#response-container").html(response);
-          },
-          error: function(xhr, status, error) {
-            console.log("Error: " + error);
-          }
-        });
-      });
-    });
-  </script>
+  <title>Work With Bootstarp</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+     <style>
+      .container{
+        border: 2px solid red ;
+      }
+      .row{
+        border: 2px solid rgb(9, 202, 109) ;
+        margin: 5px;
+      }
+      .col{
+        border: 2px solid rgb(0, 110, 255) ;
+        margin: 5px;
+        text-align: center;
+        background: aquamarine;
+      }
+     </style>
 </head>
+
 <body>
-  <button id="ajax-button">Click me</button>
-  <div id="response-container"></div>
+  <div class="container">
+       <div class="row">
+          <div class="col  me-auto p-3">
+            box 1 
+          </div>
+          <div class="col  me-auto">
+            box 2 
+          </div>
+    
+          <!--     <div class="col">
+            box 3 
+          </div>
+          <div class="col">
+            box 4 
+          </div> -->
+
+       </div>
+  </div>
+
 </body>
+
 </html>
