--- a/index.html
+++ b/index.html
@@ -8,42 +8,62 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-     <style>
-      .container{
-        border: 2px solid red ;
-      }
-      .row{
-        border: 2px solid rgb(9, 202, 109) ;
-        margin: 5px;
-      }
-      .col{
-        border: 2px solid rgb(0, 110, 255) ;
-        margin: 5px;
-        text-align: center;
-        background: aquamarine;
-      }
-     </style>
+  <style>
+
+  </style>
 </head>
 
 <body>
-  <div class="container">
-       <div class="row">
-          <div class="col  me-auto p-3">
-            box 1 
-          </div>
-          <div class="col  me-auto">
-            box 2 
-          </div>
-    
-          <!--     <div class="col">
-            box 3 
-          </div>
-          <div class="col">
-            box 4 
-          </div> -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Your Brand</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Terms and Conditions</a>
+          </li>
+        </ul>
+            <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+      </div>
+    </div>
+  </nav>
+  
 
-       </div>
+<div class="container ">
+  <div class="row m-2">
+    <div class="col-">
+      <div class="card text-center">
+        <div class="card-header">
+          Featured
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="card-footer text-muted">
+          2 days ago
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+  
 
 </body>
 
